--- a/index.html
+++ b/index.html
@@ -9,21 +9,30 @@ header:
   actions:
     - label: "Register"
       url: "https://forms.office.com/r/uCbPBaezQ0"
-excerpt: "The St Andrews University Mathematics Society (SUMS) bla bla bla (need help with writing this)."
+excerpt: "The St Andrews University Mathematics Society (SUMS) blah blah blah (need help with writing this)."
 intro: 
   - excerpt: 'Some nice quote from a mathematician maybe?'
-feature_row2:
+about_row:
   - image_path: /assets/images/sta-grass.jpg
     title: "About Us"
-    excerpt: 'We are bla bla bla (need help with writing this).'
+    excerpt: 'We are blah blah blah (need help with writing this).'
     url: "about"
     btn_label: "Read More"
     btn_class: "btn--primary"
+signup_row:
+    - image_path: /assets/images/unsplash-gallery-image-2.jpg
+      title: "Join US"
+      excerpt: 'To buy the membership, click this link (insert link). To buy the membership, visit Your Union Website. (Your Union Logo on the right)'
+      url: "https://www.yourunion.net/activities/societies/explore/maths/"
+      btn_label: "Buy Membership"
+      btn_class: "btn--primary"
 ---
 
 {% include feature_row id="intro" type="center" %}
 
-{% include feature_row id="feature_row2" type="left" %}
+{% include feature_row id="about_row" type="left" %}
+
+{% include feature_row id="signup_row" type="right" %}
 
 <h1>Upcoming Events</h1>
 Here's where we put our upcoming events.
