--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ about_row:
 signup_row:
     - image_path: /assets/images/unsplash-gallery-image-2.jpg
       title: "Join US"
-      excerpt: 'To buy the membership, click this link (insert link). To buy the membership, visit Your Union Website. (Your Union Logo on the right)'
+      excerpt: 'To sign up for the mailing list, click this link (insert link). To buy the membership, visit Your Union Website. (Your Union Logo on the right)'
       url: "https://www.yourunion.net/activities/societies/explore/maths/"
       btn_label: "Buy Membership"
       btn_class: "btn--primary"
