update index page

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@ about_row:
     btn_label: "Read More"
     btn_class: "btn--primary"
 signup_row:
-    - image_path: /assets/images/unsplash-gallery-image-2.jpg
+    - image_path: /assets/images/your-union.svg
       title: "Join US"
-      excerpt: 'To sign up for the mailing list, click this link (insert link). To buy the membership, visit Your Union Website. (Your Union Logo on the right)'
+      excerpt: 'Please fill in the form to [sign up to our mailing list](https://forms.office.com/r/44qAwwKgSn). To buy the membership, visit Your Union Website.'
       url: "https://www.yourunion.net/activities/societies/explore/maths/"
       btn_label: "Buy Membership"
       btn_class: "btn--primary"
@@ -32,9 +32,11 @@ signup_row:
 
 {% include feature_row id="about_row" type="left" %}
 
-{% include feature_row id="signup_row" type="right" %}
-
 <h1>Upcoming Events</h1>
 Here's where we put our upcoming events.
+
+<hr>
+
+{% include feature_row id="signup_row" type="right" %}
 
 
