--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@ header:
   actions:
     - label: "Register"
       url: "https://forms.office.com/r/uCbPBaezQ0"
-excerpt: "The St Andrews University Mathematics Society (SUMS) blah blah blah (need help with writing this)."
+excerpt: "Welcome to the SUMS website - the St Andrews' University Mathematics Society."
 intro: 
-  - excerpt: 'Some nice quote from a mathematician maybe?'
+  - excerpt: '"Mathematics knows no races or geographic boundaries; for mathematics, the cultural world is one country." - David Hilbert'
 about_row:
   - image_path: /assets/images/sta-grass.jpg
     title: "About Us"
-    excerpt: 'We are blah blah blah (need help with writing this).'
+    excerpt: 'We are the Mathematics Society based in St Andrews. We organise events based around maths, such as competitions, study sessions, socials, and dinners. We also help the School with organising events such as the annual Pi Ball.'
     url: "about"
     btn_label: "Read More"
     btn_class: "btn--primary"
