--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@ header:
   actions:
     - label: "Register"
       url: "https://forms.office.com/r/uCbPBaezQ0"
-excerpt: "The St Andrews University Mathematics Society (SUMS) blah blah blah (need help with writing this)."
+excerpt: "Welcome to the St Andrews' University Mathematics Society Website!"
 intro: 
-  - excerpt: 'Some nice quote from a mathematician maybe?'
+  - excerpt: '"Mathematics knows no races or geographical boundaries; for mathematics, the cultural world is one country." - David Hilbert'
 about_row:
   - image_path: /assets/images/sta-grass.jpg
     title: "About Us"
-    excerpt: 'We are blah blah blah (need help with writing this).'
+    excerpt: 'We are SUMS (St Andrews' University Mathematics Society), a society for St Andrews' students with an interest in anything mathematical. We organise events, competitions, socials, and more!'
     url: "about"
     btn_label: "Read More"
     btn_class: "btn--primary"
